Fix WebSocketHandlerMapping match for "/*"
Closes gh-34503